--- a/src/sample/Standardbruker.fxml
+++ b/src/sample/Standardbruker.fxml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_Controller">
     <children>
         <ImageView fitHeight="409.0" fitWidth="617.0" layoutX="-9.0" layoutY="-8.0">
             <image>
                 <Image url="@../img/background.jpg" />
             </image>
         </ImageView>
-        <Button fx:id="btnTilbake" layoutX="430.0" layoutY="316.0" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" prefHeight="26.0" prefWidth="98.0" style="-fx-background-color: black;" text="Tilbake" textFill="WHITE">
+        <Button fx:id="btnTilbake" layoutX="430.0" layoutY="315.0" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: black;" text="Tilbake" textFill="WHITE">
             <font>
                 <Font name="Helvetica Bold" size="11.0" />
             </font>
@@ -59,11 +60,12 @@
                 <Image url="@../img/logo3.png" />
             </image>
         </ImageView>
-        <Button fx:id="btnKurv" layoutX="77.0" layoutY="316.0" mnemonicParsing="false" onAction="#On_Click_BtnKurv" prefHeight="26.0" prefWidth="98.0" style="-fx-background-color: black;" text="Din handlekurv" textFill="WHITE">
+        <Button fx:id="btnKurv" layoutX="70.0" layoutY="315.0" mnemonicParsing="false" onAction="#On_Click_BtnKurv" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: black;" text="Din handlekurv" textFill="WHITE">
             <font>
                 <Font name="Helvetica Bold" size="11.0" />
             </font>
         </Button>
         <ScrollPane fx:id="pane" layoutX="600.0" layoutY="-7.0" prefHeight="409.0" prefWidth="200.0" />
+      <Label fx:id="labelError" alignment="CENTER" layoutX="69.0" layoutY="368.0" prefHeight="18.0" prefWidth="477.0" />
     </children>
 </AnchorPane>
