--- a/src/sample/Mellom_side_Superbruker.fxml
+++ b/src/sample/Mellom_side_Superbruker.fxml
@@ -14,19 +14,19 @@
                 <Image url="@../img/background.jpg" />
             </image>
         </ImageView>
-        <Label layoutX="54.0" layoutY="147.0" prefHeight="34.0" prefWidth="452.0" text="Du har nå logget inn som administrator, hvilken side vil du til nå?">
+        <Label layoutX="46.0" layoutY="148.0" prefHeight="34.0" prefWidth="469.0" text="Du har nå logget inn som administrator, hvilken side vil du til nå?">
             <font>
-                <Font name="Rockwell" size="15.0" />
+                <Font name="Helvetica Bold" size="15.0" />
             </font>
         </Label>
-        <Button layoutX="64.0" layoutY="198.0" mnemonicParsing="false" onAction="#On_Click_BtnVisKomponenter" prefHeight="58.0" prefWidth="180.0" style="-fx-background-color: #3daee4;" text="Systemets komponenter">
+        <Button layoutX="46.0" layoutY="198.0" mnemonicParsing="false" onAction="#On_Click_BtnVisKomponenter" prefHeight="58.0" prefWidth="180.0" style="-fx-background-color: #3daee4;" text="Systemets komponenter">
             <font>
-                <Font name="Rockwell" size="14.0" />
+                <Font name="Helvetica" size="14.0" />
             </font>
         </Button>
-        <Button layoutX="318.0" layoutY="198.0" mnemonicParsing="false" onAction="#On_Click_BtnVisBrukere" prefHeight="58.0" prefWidth="180.0" style="-fx-background-color: #3daee4;" text="Brukere">
+        <Button layoutX="338.0" layoutY="198.0" mnemonicParsing="false" onAction="#On_Click_BtnVisBrukere" prefHeight="58.0" prefWidth="127.0" style="-fx-background-color: #3daee4;" text="Brukere">
             <font>
-                <Font name="Rockwell" size="14.0" />
+                <Font name="Helvetica" size="14.0" />
             </font>
         </Button>
         <ImageView fitHeight="141.0" fitWidth="180.0" layoutX="191.0" layoutY="14.0">
@@ -34,9 +34,9 @@
                 <Image url="@../img/logo1.png" />
             </image>
         </ImageView>
-        <Button layoutX="244.0" layoutY="283.0" mnemonicParsing="false" onAction="#On_Click_BtnReturnerTilStart" prefHeight="18.0" prefWidth="74.0" style="-fx-background-color: black;" text="Logg ut" textFill="WHITE">
+        <Button layoutX="243.0" layoutY="263.0" mnemonicParsing="false" onAction="#On_Click_BtnReturnerTilStart" prefHeight="18.0" prefWidth="74.0" style="-fx-background-color: black;" text="Logg ut" textFill="WHITE">
             <font>
-                <Font name="Rockwell" size="11.0" />
+                <Font name="Helvetica" size="11.0" />
             </font>
         </Button>
       <Label fx:id="lblError" layoutX="124.0" layoutY="294.0" prefHeight="18.0" prefWidth="302.0" />
