--- a/src/sample/Registrering.fxml
+++ b/src/sample/Registrering.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="468.0" prefWidth="611.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Registrering_Controller">
     <children>
-        <ImageView fitHeight="468.0" fitWidth="610.0" layoutX="-7.0" layoutY="-7.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <ImageView fitHeight="1089.0" fitWidth="1921.0" layoutX="-7.0" layoutY="-7.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <image>
                 <Image url="@../img/background.jpg" />
             </image>
@@ -58,12 +58,12 @@
         </TextField>
         <CheckBox fx:id="chxAdmin" layoutX="149.0" layoutY="391.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="77.0" text="Admin">
             <font>
-                <Font name="Verdana" size="14.0" />
+                <Font name="Verdana Bold" size="14.0" />
             </font>
         </CheckBox>
         <CheckBox fx:id="chxStandarbruker" layoutX="252.0" layoutY="391.0" mnemonicParsing="false" text="Standardbruker">
             <font>
-                <Font name="Verdana" size="14.0" />
+                <Font name="Verdana Bold" size="14.0" />
             </font>
         </CheckBox>
         <Button fx:id="btnRegistrer" layoutX="434.0" layoutY="177.0" mnemonicParsing="false" onAction="#onClick_btn_Register" prefHeight="66.0" prefWidth="118.0" style="-fx-background-color: #3daee4;" text="Register">
@@ -76,12 +76,15 @@
                 <Font name="Verdana" size="14.0" />
             </font>
         </Button>
-        <Label layoutX="149.0" layoutY="64.0" prefHeight="30.0" prefWidth="243.0" text="Registrer ny bruker">
+        <Label layoutX="136.0" layoutY="65.0" prefHeight="30.0" prefWidth="243.0" text="Registrer ny bruker">
             <font>
-                <Font name="Verdana" size="22.0" />
+                <Font name="Verdana Bold" size="20.0" />
             </font>
         </Label>
-        <Label fx:id="labelError" layoutX="179.0" layoutY="410.0" prefHeight="18.0" prefWidth="230.0" />
+        <Label fx:id="labelError" layoutX="156.0" layoutY="430.0" prefHeight="18.0" prefWidth="230.0">
+         <font>
+            <Font name="Verdana" size="12.0" />
+         </font></Label>
         <ImageView fitHeight="90.0" fitWidth="109.0" layoutX="439.0" layoutY="35.0">
             <image>
                 <Image url="@../img/logo2.png" />
