--- a/src/sample/Standardbruker.fxml
+++ b/src/sample/Standardbruker.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="409.0" prefWidth="617.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_Controller">
     <children>
-        <ImageView fitHeight="409.0" fitWidth="617.0" layoutX="-9.0" layoutY="-8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-17.0" AnchorPane.topAnchor="0.0">
+        <ImageView fitHeight="1089.0" fitWidth="1921.0" layoutX="-9.0" layoutY="-8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-17.0" AnchorPane.topAnchor="0.0">
             <image>
                 <Image url="@../img/background.jpg" />
             </image>
@@ -66,6 +66,9 @@
             </font>
         </Button>
         <ScrollPane fx:id="pane" layoutX="617.0" layoutY="-7.0" prefHeight="416.0" prefWidth="405.0" />
-      <Label fx:id="labelError" alignment="CENTER" layoutX="69.0" layoutY="368.0" prefHeight="18.0" prefWidth="477.0" />
+      <Label fx:id="labelError" alignment="CENTER" layoutX="70.0" layoutY="377.0" prefHeight="18.0" prefWidth="477.0">
+         <font>
+            <Font name="Verdana" size="12.0" />
+         </font></Label>
     </children>
 </AnchorPane>
