--- a/src/sample/Visbruker_Superbruker.fxml
+++ b/src/sample/Visbruker_Superbruker.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane prefHeight="584.0" prefWidth="900.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Visbruker_Superbruker_Controller">
     <children>
-        <ImageView fitHeight="598.0" fitWidth="914.0" layoutX="-6.0" layoutY="-7.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <ImageView fitHeight="1089.0" fitWidth="1921.0" layoutX="-6.0" layoutY="-7.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <image>
                 <Image url="@../img/background.jpg" />
             </image>
@@ -66,7 +66,7 @@
                         <Font name="Verdana" size="15.0" />
                     </font>
                 </Label>
-                <TextField fx:id="txtSøk" layoutX="223.0" layoutY="31.0" promptText="Skriv inn brukernavn">
+                <TextField fx:id="txtSøk" layoutX="223.0" layoutY="31.0" prefHeight="23.0" prefWidth="162.0" promptText="Skriv inn brukernavn">
                <font>
                   <Font name="Verdana" size="12.0" />
                </font></TextField>
@@ -74,6 +74,9 @@
             <TextField fx:id="txtSubmit" layoutX="438.0" layoutY="30.0" visible="false" />
             </children>
         </AnchorPane>
-        <Label fx:id="LabelError" alignment="CENTER" layoutX="285.0" layoutY="493.0" prefHeight="29.0" prefWidth="400.0" textAlignment="CENTER" />
+        <Label fx:id="LabelError" alignment="CENTER" layoutX="256.0" layoutY="490.0" prefHeight="29.0" prefWidth="400.0" textAlignment="CENTER">
+         <font>
+            <Font name="Verdana" size="12.0" />
+         </font></Label>
     </children>
 </AnchorPane>
